Attempting first video upload

--- a/TangramProject/sample/index.html
+++ b/TangramProject/sample/index.html
@@ -5,5 +5,7 @@
 
 A sample Java implementation demonstrating the Entity/Boundary/Controller design paradigm.
 
+<embed src="/TangramProject/support/mp4/mediaplayer.swf?file=mp4/sample0-hd1.mp4" width="325" height="230" allowfullscreen="true" />
+
 </body>
 </html>
