--- a/TangramProject/sample/change.html
+++ b/TangramProject/sample/change.html
@@ -28,7 +28,7 @@ height : 100%;
 </style>
 
 <video width="300" height="150" controls>
-<source src="mp4/sampleh0-hd1.mp4" type="video/mp4">
+<source src="xmp4/sampleh0-hd1.mp4" type="video/mp4">
  Your browser does not support the video tag.
 </video>
 
