--- a/TangramProject/sample/change.html
+++ b/TangramProject/sample/change.html
@@ -35,7 +35,7 @@ height : 100%;
 <figure class="large">
     <div class="myvideo">
        <video  style="display:block; width:100%; height:auto;" autoplay controls loop="loop">
-           <source src="mp4/sampleh0-hd1.mp4" type="video/mp4" />
+           <source src="/TangramProject/sample/mp4/sampleh0-hd1.mp4" type="video/mp4" />
        </video>
     </div>
 <figcaption>Sample Video</figcaption>
