--- a/TangramProject/sample/index.html
+++ b/TangramProject/sample/index.html
@@ -3,9 +3,22 @@
 
 <h1>Sample Design Project</h1>
 
-A sample Java implementation demonstrating the Entity/Boundary/Controller design paradigm.
+A sample Java implementation demonstrating the Entity/Boundary/Controller design paradigm. 
+The code for this tutorial can be found at <a href="https://github.com/heineman/tangram">https://github.com/heineman/tangram</a>.
 
-<embed src="/TangramProject/support/mp4/mediaplayer.swf?file=mp4/sample0-hd1.mp4" width="325" height="230" allowfullscreen="true" />
+<h2>Set up Sample Application Structure and Initial Gui Layout (6 min, 26 sec)</h2>
+<b>Github release link:</b><small><b>
+<a href="https://github.com/heineman/tangram/releases/tag/sample.0">sample.0</a>
+</b></small><br>
+
+<video width="320" height="256" controls style=" width:320px; height:256px;">
+<source src="/TangramProject/sample/mp4/sample0-hd1.mp4" type="video/mp4">
+ Your browser does not support the video tag.
+</video>
+<br>
+<small><a href="mp4/sample0-hd1.mp4">MP4</a> | <a href="wmv/sample0.wmv">WMV</a></small>
+<p>
+<button type="button" disabled="true">Prev</button>&nbsp;<a href="index1.html"><button type="button">Next</button></a>
 
 </body>
 </html>
