sample2 vids uploaded

--- a/TangramProject/sample/change.html
+++ b/TangramProject/sample/change.html
@@ -1,7 +1,7 @@
 <HTML>
 <BODY>
 
-<video width="300" height="150" controls>
+<video width="300" height="150" controls style=" width:320px; height:256px;">
 <source src="/TangramProject/sample/mp4/sample0-hd1.mp4" type="video/mp4">
  Your browser does not support the video tag.
 </video>
