Completed video sequencing and updated HTML

--- a/TangramProject/sample/index3.html
+++ b/TangramProject/sample/index3.html
@@ -7,9 +7,10 @@ A sample Java implementation demonstrating the Entity/Boundary/Controller design
 The code for this tutorial can be found at <a href="https://github.com/heineman/tangram">https://github.com/heineman/tangram</a>.
 
 <h2>Create CompletePolygon controller and update menu items (0 min, 21 sec)</h2>
-<b>Github release link:</b><small><b>
-<a href="https://github.com/heineman/tangram/releases/tag/sample.3">sample.3</a>
-</b></small><br>
+
+<b>Code:</b><small>Stand-alone zip file 
+(<a href="https://github.com/heineman/tangram/releases/tag/sample.3">sample.3</a>)
+</small> or <small>switch to <b>sample.3-branch</small> in git repository<p>
 
 <video width="320" height="256" controls style=" width:320px; height:256px;">
 <source src="/TangramProject/sample/mp4/sample3-hd1.mp4" type="video/mp4">
