--- a/TangramProject/sample/index5.html
+++ b/TangramProject/sample/index5.html
@@ -7,9 +7,10 @@ A sample Java implementation demonstrating the Entity/Boundary/Controller design
 The code for this tutorial can be found at <a href="https://github.com/heineman/tangram">https://github.com/heineman/tangram</a>.
 
 <h2>Add Reset controller and Quit Controller to complete application (3 min, 18 sec)</h2>
-<b>Github release link:</b><small><b>
-<a href="https://github.com/heineman/tangram/releases/tag/sample.5">sample.5</a>
-</b></small><br>
+
+<b>Code:</b><small>Stand-alone zip file 
+(<a href="https://github.com/heineman/tangram/releases/tag/sample.5">sample.5</a>)
+</small> or <small>switch to <b>sample.5-branch</small> in git repository<p>
 
 <video width="320" height="256" controls style=" width:320px; height:256px;">
 <source src="/TangramProject/sample/mp4/sample5-hd1.mp4" type="video/mp4">
@@ -18,7 +19,7 @@ The code for this tutorial can be found at <a href="https://github.com/heineman/
 <br>
 <small><a href="mp4/sample5-hd1.mp4">MP4</a> | <a href="wmv/sample5.wmv">WMV</a></small>
 <p>
-<a href="index4.html"><button type="button">Prev</button></a>&nbsp;<button type="button" disabled="true">Next</button>
+<a href="index4.html"><button type="button">Prev</button></a>&nbsp;<a href="index6.html"><button type="button">Next</button></a>
 
 </body>
 </html>
