--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <body>
     <p>This is the location of repository of documentation for github repositories.</p>
-    <h3>Tangram Application</h3>
+    <h3><a href="TangramProject">Tangram Application</a></h3>
     <p>This project represents a case study in developing a GUI-based Swing application that conforms to the Entity/Boundary/Controller design paradigmn.
       The application domain is the Tangram puzzle, a two-dimensional disassembly puzzle with seven pieces that form a square.
       It contains two conceptual iterations - the first one demonstrates from scratch how to design and implement a Swing application. The second part
       refactors the original application to apply design patterns.</p>
     
-    <h3>Draw Application</h3>
+    <h3><a href="Draw">Draw Application</a></h3>
     <p>This project represents a case study in applying a number of design patterns to develop a GUI application similar to PowerPoint. There are 
       a number of git tags (draw.0 through draw.5) that represent the different iterations as the project was implemented.</p>
   </body>
