--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <p>This is the location of repository of documentation for github repositories.</p>
-    <h3>Tangram Application/h3>
+    <h3>Tangram Application</h3>
     <p>This project represents a case study in developing a GUI-based Swing application that conforms to the Entity/Boundary/Controller (EBC) design paradigmn.
       The application domain is the Tangram puzzle, a two-dimensional disassembly puzzle with seven pieces that form a square.
       It contains two conceptual iterations - the first one demonstrates from scratch how to design and implement a Swing application. The second part
