--- a/Draw/index.html
+++ b/Draw/index.html
@@ -12,12 +12,12 @@
 
 <li>Adapter -- <b>Allow classes with incompatible interfaces to work together</b>. Used in <a href="https://heineman.github.io/Draw/api-draw.5/draw/controller/handler/ActiveToolHandler.html">ActiveToolHandler</a>.
 
-<img width=283 height=117 src="https://heineman.github.io/Draw/api-draw.5/draw/controller/handler/doc-files/adapter.png"></img>
+<p><a href="https://heineman.github.io/Draw/api-draw.5/draw/controller/handler/doc-files/adapter.png"><img width=283 height=117 border=0 src="https://heineman.github.io/Draw/api-draw.5/draw/controller/handler/doc-files/adapter.png"></img></a></p>
 </li>
 
 <li>Chain of Responsibility -- <b>Delegate commands to a chain of processing objects.</b> Used in <a href="https://heineman.github.io/Draw/api-draw.5/draw/controller/handler/Handler.html">Handler</a>.
 
-<img width=217 height=105 src="https://heineman.github.io/Draw/api-draw.5/draw/controller/handler/doc-files/chain-of-responsibility.png"></img>
+<p><a href="https://heineman.github.io/Draw/api-draw.5/draw/controller/handler/doc-files/chain-of-responsibility.png"><img width=217 height=105 border=0 src="https://heineman.github.io/Draw/api-draw.5/draw/controller/handler/doc-files/chain-of-responsibility.png"></img></a></p>
 </li>
 
 <li>Command -- <b>Create objects which encapsulate actions and parameters</b>. Used in <a href="https://heineman.github.io/Draw/api-draw.5/draw/controller/command/Command.html">Command</a>.
@@ -25,12 +25,14 @@
 
 <li>Composite -- <b>Compose similar objects so they can be manipulated as one object</b>. Used in <a href="https://heineman.github.io/Draw/api-draw.5/">Group</a>.
 
-<img width=125 height=100 src="https://heineman.github.io/Draw/api-draw.5/draw/model/doc-files/composite.png"></img>
+<p><a href="https://heineman.github.io/Draw/api-draw.5/draw/model/doc-files/composite.png">
+<img width=125 height=100 border=0 src="https://heineman.github.io/Draw/api-draw.5/draw/model/doc-files/composite.png"></img></a></p>
 </li>
 
 <li>Visitor -- <b>Separate algorithm from object structure</b>. Used in <a href="https://heineman.github.io/Draw/api-draw.5/draw/model/Visitor.html">Visitor</a>.
 
-<img width=300 height=94 src="https://heineman.github.io/Draw/api-draw.5/draw/controller/visitors/doc-files/visitor.png"></img>
+<p><a href="https://heineman.github.io/Draw/api-draw.5/draw/controller/visitors/doc-files/visitor.png">
+<img width=300 height=94 border=0 src="https://heineman.github.io/Draw/api-draw.5/draw/controller/visitors/doc-files/visitor.png"></img></a></p>
 </li>
 </ul>
 
